--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node lib/socket-server",
+        "start": "node ./socket-server",
         "build": "babel src -d lib"
     },
     "author": "",
@@ -14,6 +14,10 @@
         "babel-preset-es2015": "^6.3.13"
     },
     "dependencies": {
-        "ws": "^1.0.1"
+        "ws": "^1.0.1",
+        "express": "^4.4.5"
+    },
+    "engines": {
+        "node": "0.10.x"
     }
 }
