--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "chromecast",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node ./server/socket-server",
-    "build": "babel src -d lib",
-    "build-sender": "webpack",
-    "watch-sender": "webpack --watch"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-cli": "^6.4.0",
-    "babel-core": "^6.4.0",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "webpack": "^1.12.11"
-  },
-  "dependencies": {
-    "ws": "^1.0.1",
-    "express": "^4.4.5"
-  },
-  "engines": {
-    "node": "0.10.x"
-  }
+    "name": "chromecast",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "postinstall": "npm run build",
+        "start": "node ./server/socket-server",
+        "build": "webpack",
+        "build-watch": "webpack --watch"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {},
+    "dependencies": {
+        "ws": "^1.0.1",
+        "express": "^4.4.5",
+        "babel-cli": "^6.4.0",
+        "babel-core": "^6.4.0",
+        "babel-loader": "^6.2.1",
+        "babel-preset-es2015": "^6.3.13",
+        "webpack": "^1.12.11"
+    },
+    "engines": {
+        "node": "4.x.x"
+    }
 }
